next.js 服务端的使用

--- a/chatgpt-app/package.json
+++ b/chatgpt-app/package.json
@@ -16,7 +16,8 @@
     "react-markdown": "^10.1.0",
     "react-syntax-highlighter": "^15.6.1",
     "react-textarea-autosize": "^8.5.8",
-    "remark-gfm": "^4.0.1"
+    "remark-gfm": "^4.0.1",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
