--- a/chatgpt-app/package.json
+++ b/chatgpt-app/package.json
@@ -24,6 +24,7 @@
     "@tailwindcss/postcss": "^4",
     "eslint": "^9",
     "eslint-config-next": "15.2.1",
+    "prisma": "^6.5.0",
     "tailwindcss": "^4"
   }
 }
